@@ -1,5 +1,6 @@
 Systre 1.1.5:
 
+- The embedding step can now be skipped all together.
 - A connectivity value of 0 for an atom is now read as 'undetermined'.
 - The GUI version now has an option to process whole files without stopping.
 - Integer numbers in input files can now start with a '+' character.
